--- a/style.css
+++ b/style.css
@@ -3,18 +3,21 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
-  margin: 0;
 }
 
-.container {
+.gridCreator {
+    display: flex;
+    gap: 10px;
+    margin: 25px;
+}
+
+.grid {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  max-width: 800px;
-  max-height: 800px;
+  max-width: 1400px;
+  overflow: auto;
 }
 
 .squareRow {
@@ -28,4 +31,13 @@ body {
   max-width: 25px;
   max-height: 25px;
   padding: 25px;
+  transition: all 0.5s ;
+}
+
+.square:hover {
+  background-color: yellow;
+}
+
+.yellow {
+  background-color: yellow;
 }
